# icongridanalysis

./: README.md  icongrid.ipynb  icongrid_class.ipynb  main.py  pyproject.toml
igutils/: pyproject.toml
igutils/src/igutils/: __init__.py  utils.py
