[project]
name = "icongrid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "h5netcdf>=1.6.1",
    "igutils",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "numpy>=2.2.5",
    "xarray>=2025.4.0",
]

[tool.uv.workspace]
members = ["igutils"]

[tool.uv.sources]
igutils = { workspace = true }
